--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-v0.3.0 (2026-01-30)
+v0.2.0 (2026-01-30)
 - Added narrative analysis sections to reports (narrative, agent response summary, sales/marketing recommendations).
 - Report analysis now uses Gemini 3 Pro Preview with explicit thinking budget configuration.
 - PDF export uses browser rendering (Playwright) for closer HTML parity (fallback to WeasyPrint).
@@ -12,12 +12,18 @@ v0.3.0 (2026-01-30)
 - Reuse extracted URL data across simulation, price analysis, and focus group without re-fetching.
 - Persist extracted URL data in projects and reload on project load.
 
-Known issue:
-- Gemini 3 Pro Preview sometimes returns empty text in API unless thinking_budget is set; analysis can still fail on some runs.
-
-v0.3.1 (2026-01-30)
+v0.3.0 (2026-01-30)
 - Overhauled report analysis prompts (PL/EN) for deeper, literal, data-anchored insights and enforced suffixes on recommendations.
 - Increased default report analysis max output tokens to 16384.
 - Added sanitize pass using the same model to neutralize style and remove storytelling artifacts.
 - Enforced recommendation suffixes server-side with automatic validation.
 - Added report analysis sanitize cache refresh (v3) in frontend pipeline.
+
+v0.3.5 (2026-01-31)
+- Fixed Hugging Face deployment: Added missing system dependencies (Pango, Cairo, etc.) and Python packages (WeasyPrint, Pandas, pytz).
+- Enabled full Playwright support in Docker (Chromium + system dependencies).
+- Fixed "File wasn't available on site" error on Hugging Face by relocating report exports to a local 'reports/' directory and configuring Gradio 'allowed_paths'.
+- Updated local setup (run.sh) to automatically handle Playwright browser installation.
+- Added logging and write permission handling (chmod 777) for persistent report storage on server.
+- Synced GitHub (origin) and Hugging Face (hf) repositories for consistent deployment.
+
